add stage to matches and apply  badge
