# src/app/core/api/models/match-stage-array.ts
@@ -1,0 +1,28 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+import { MatchStage } from './match-stage';
+
+/**
+ * Each possible value of `MatchStage`
+ */
+export const MATCH_STAGE: MatchStage[] = [
+  'A',
+  'B',
+  'C',
+  'D',
+  'E',
+  'F',
+  'G',
+  'H',
+  'I',
+  'J',
+  'K',
+  'L',
+  'ROUND_32',
+  'ROUND_16',
+  'ROUND_8',
+  'SEMI_FINAL',
+  'FINAL',
+  'THIRD_PLACE'
+];
