# src/app/core/api/models/match.ts
@@ -1,6 +1,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { MatchStage } from '../models/match-stage';
 import { MatchStatus } from '../models/match-status';
 import { Team } from '../models/team';
 export interface Match {
@@ -13,5 +14,6 @@ export interface Match {
   id: number;
   kickoffTime: string;
   matchdayId: number;
+  stage?: MatchStage;
   status: MatchStatus;
 }
