# src/app/core/api/models/update-match-request.ts
@@ -1,6 +1,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+import { MatchStage } from '../models/match-stage';
 import { MatchStatus } from '../models/match-status';
 export interface UpdateMatchRequest {
   awayGoals?: number;
@@ -8,5 +9,6 @@ export interface UpdateMatchRequest {
   homeGoals?: number;
   homeTeamId?: number;
   kickoffTime?: string;
+  stage?: MatchStage;
   status?: MatchStatus;
 }
